--- a/FrontEndFinalProject/index.html
+++ b/FrontEndFinalProject/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/cogs_result.svg	" />
+		<link rel="icon" type="image/favicon" href="./img/fav.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Inside Experiences</title>
 	</head>
